Excluding existing friends from being recommended